...
            HbMarkdownStyle.Link -> SpanStyle(textDecoration = TextDecoration.Underline)
        }
        addStyle(style, span.start, span.end)
        if (span.style == HbMarkdownStyle.Link && span.destination != null && onLinkClick != null) {
            addLink(
                LinkAnnotation.Clickable(
                    tag = span.destination,
                    styles = TextLinkStyles(style = style),
                    linkInteractionListener = {
                        log.i { "Markdown link activated" }
                        onLinkClick(span.destination)
                    },
                ),
...
